<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.praktekfragment.OptionDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siapa_pelatih_tersukses_manchester_united"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_options"
        android:orientation="vertical" >

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_saf"
            android:text="@string/sir_alex_ferguson"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_mou"
            android:text="@string/jose_mourinho"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_lvg"
            android:text="@string/louis_van_gaal"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_moyes"
            android:text="@string/david_moyes"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/btn_close"
            android:text="@string/tutup"
            android:layout_marginRight="4dp"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="4dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/btn_choose"
            android:text="@string/pilih"
            android:layout_marginLeft="4dp"
            tools:ignore="ButtonStyle"
            android:layout_marginStart="4dp" />
    </LinearLayout>

</LinearLayout>